--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,17 +17,11 @@
     }
 }
 
-@media (max-width: 850px) {
-    footer {
-        gap: 2rem;
-    }
-}
-
 @media (max-width: 800px) {
     footer {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        /* gap: 1rem; */
         padding: 2rem 4rem;
     }
 
@@ -71,10 +65,6 @@
 
     footer .strong-title {
         font-size: 1rem;
-    }
-
-    footer p {
-        font-size: 0.875rem;
     }
 }
 
